[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/card_bg.png" type="Texture" id=1]
[ext_resource path="res://OpenSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game.gd" type="Script" id=3]
[ext_resource path="res://game/player.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.34902 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[node name="game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
playerScene = ExtResource( 4 )
playerCount = 4

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="board" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="NinePatchRect" parent="board"]
self_modulate = Color( 0.177933, 0.177933, 0.269531, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 300, 300 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="GridContainer" parent="board"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hold" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="holdButton" type="Button" parent="hold"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
text = "HOLD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Player % looses"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="Button" parent="Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -51.0
margin_top = -60.0
margin_right = 52.0
margin_bottom = -25.0
text = "Menu"
[connection signal="button_down" from="hold/holdButton" to="." method="_on_holdButton_button_down"]
[connection signal="button_up" from="hold/holdButton" to="." method="_on_holdButton_button_up"]
[connection signal="pressed" from="Label/menuButton" to="." method="_on_menuButton_pressed"]
